scrollbar color fix

--- a/themes/minima/source/css/custom.css
+++ b/themes/minima/source/css/custom.css
@@ -200,7 +200,7 @@ blockquote footer cite:before {
   background: rgb(128 128 128 / 80%);
 }
 ::-webkit-scrollbar-thumb:window-inactive {
-  background: rgb(255 255 255);
+  background: rgb(128 128 128 / 20%);
 }
 
 /* Dark mode */
